[package]
name = "procfs-rust-benchmarks"
version = "0.0.0"
authors = ["Joshua Li <josh@jrl.ninja>"]

[[bin]]
name = "bench-stat-partial-read"
path = "stat-partial-read.rs"

[[bin]]
name = "bench-stat-complete-read"
path = "stat-complete-read.rs"

[[bin]]
name = "bench-stat-complete-read-oneshot"
path = "stat-complete-read-oneshot.rs"

[[bin]]
name = "bench-proc-status"
path = "proc-status.rs"

[[bin]]
name = "bench-proc-statm"
path = "proc-statm.rs"
